# discourse2fedmsg-messages

./: .coveragerc  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: label-when-deployed.yml  main.yml
discourse2fedmsg_messages/: __init__.py  base.py  thing.py
discourse2fedmsg_messages/tests/: test_common.py  test_like.py  test_post.py  test_schema.py  test_solved.py  test_thing.py  test_topic.py  utils.py
tests/: test_like.py  test_schema.py  test_solved.py  test_topic.py
