[metadata]
name = discourse2fedmsg-messages
version = 1.0.0
description = A schema package for messages sent by discourse2fedmsg
long_description = file: README.md
url = http://github.com/fedora-infra/discourse2fedmsg
maintainer = Fedora Infrastructure Team
maintainer_email = infrastructure@lists.fedoraproject.org
keywords = fedora
platforms = Fedora, GNU/Linux
license = GPLv2+
classifiers =
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
  fedora_messaging

[options.entry_points]
fedora.messages =
    discourse.event.v1=discourse2fedmsg_messages:DiscourseMessageV1

[bdist_wheel]
universal = 1

[flake8]
show-source = True
max-line-length = 100
exclude = .git,.tox,dist,*egg,build,venv,.venv
ignore = E203,W503

[tool:pytest]
testpaths = discourse2fedmsg_messages/tests/

[coverage:run]
branch = True
source = discourse2fedmsg_messages

[coverage:paths]
source =
   discourse2fedmsg_messages
   .tox/*/site-packages/discourse2fedmsg_messages

[coverage:report]
fail_under = 100
exclude_lines =
    pragma: no cover
    if __name__ == .__main__.:
omit =
    discourse2fedmsg_messages/tests/*
